# CREWAI

./: .gitignore  README.md
AI_Trip_planner/AI_Trip_planner/: agents.py  main.py  requirements.txt  tasks.py
AI_Trip_planner/AI_Trip_planner/tools/: calculator_tools.py  search_tools.py
Trip_planner/: agents.py  main.py  requirements.txt  tasks.py
Trip_planner/tools/: calculator_tools.py
bitcoin_crew/: main.py  requirements.txt
bitcoin_crew/tools/: search_tools.py
crew_AI_tinyllama/: agent.py  main.py  ollama_test.py  requirements.txt  tasks.py
crew_AI_tinyllama/tools/: llama_tool.py
crew_ai_project/: agents.py  crew.py  main.py  requirements.txt  tasks.py
demo1/: pyproject.toml
football-predictor/: streamlit_app.py
lead/: crew.py  lead_report.md  main.py  requirements.txt  streamlit_app.py
lead/config/: agents.yaml  tasks.yaml
lead/tools/: search_tools.py
my_crew/: README.md  pyproject.toml
my_crew/src/my_crew/: crew.py
my_crew/src/my_crew/config/: agents.yaml
sales_personalized_email/: crew.py  main.py  personalized_email.md
sales_personalized_email/config/: agents.yaml  tasks.yaml
smol-crewai/: main.py  requirements.txt
test/: README.md  pyproject.toml
test/src/test/: crew.py  main.py
