[project]
name = "test"
version = "0.1.0"
description = "test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
test = "test.main:run"
run_crew = "test.main:run"
train = "test.main:train"
replay = "test.main:replay"
test = "test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
